# ytcm-web

./: .gitignore  README.md  vercelignore
NAMI/NAMI/: NAMI101 -- Overview.md  NAMI102 -- Technical Reference.md  pyproject.toml
NAMI/NAMI/config/: domain.yaml  project.yaml  schema.yaml  songs.yaml
NAMI/NAMI/scripts/: NAMI.py  NAMI_shell_commands.py  add_songs.py  analyse.py  check_spam.py  crawl_details.py  crawl_index.py  create_salt.sh  fetch_media.py  fetch_thumbnails.py  manual_sampler.py  run_report.py  snapshot_current.py  tag_vision.py
NAMI/NAMI/scripts/nami_shell/: __init__.py  analysis_commands.py  av_commands.py  common.py  core_commands.py  crawl_commands.py  explorer_commands.py  graph_commands.py  raw_module_commands.py  scope_commands.py  setup_commands.py  state.py  talk_commands.py  vision_commands.py  viz_commands.py
NAMI/NAMI/src/nami_av/: __init__.py  __main__.py  alignment.py  asset_audio.py  assetfigures.py  assetreport.py  audio.py  bridge.py  cli.py  config.py  editing.py  edits.py  external_ids.py  features.py  lyrics.py  pipeline.py  report.py  schema.py  state.py  validate.py  variants.py
NAMI/NAMI/src/nami_code/: db.py
NAMI/NAMI/src/nami_code/analysis/: caption_style.py  check_spam.py  concordance.py  distinctive_hashtags.py  hashtag_network.py  impact_by_theme.py  spam_report.py
NAMI/NAMI/src/nami_code/crawl/: add_songs_to_yaml.py  crawl_details.py  crawl_index.py  fetch_media.py  fetch_thumbnails.py
NAMI/NAMI/src/nami_code/diagnostics/: validate_tags.py
NAMI/NAMI/src/nami_code/reports/: fonts.py
backend/: Comments.csv  (+30 more)
(+41 files in other folders)
